<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="nhan.natc.laundry.ui.login.viewmodel.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorMainBackground"
        android:padding="@dimen/left_right_padding">

        <nhan.natc.laundry.base.customview.CustomLoginEditText
            android:id="@+id/passwordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/password_lbl"
            app:isPassword="true"
            app:isShowFloatHint="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <nhan.natc.laundry.base.customview.CustomLoginEditText
            android:id="@+id/usernameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/username_lbl"
            app:isPassword="false"
            app:isShowFloatHint="true"
            android:layout_marginBottom="@dimen/country_gap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/passwordView"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue_border_layout"
            android:text="@string/login_upcase"
            app:layout_constraintTop_toBottomOf="@+id/passwordView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.7"
            android:layout_marginBottom="@dimen/left_right_padding"
            android:onClick="@{() -> viewmodel.onLogin()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

