<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="nhan.natc.laundry.ui.customer.customerdetail.viewmodel.CustomerDetailViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainBackground"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <include
                layout="@layout/status_bar"/>
            <include
                layout="@layout/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <nhan.natc.laundry.base.customview.CustomSearchEditText
            android:id="@+id/nameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout"
            app:hintEnable="true"
            app:hintSearch="@string/name_lbl"
            app:isQuickClearText="true"
            app:textFont="@font/montserrat_regular"
            app:textSize="@dimen/text_size"
            app:startIcon="@drawable/ic_user_small"
            app:tag="@+id/nameView"
            android:background="@drawable/home_top_border_layout"
            android:layout_marginTop="@dimen/left_right_padding"
            android:layout_marginLeft="@dimen/country_gap"
            android:layout_marginRight="@dimen/country_gap"
            />

        <nhan.natc.laundry.base.customview.CustomSearchEditText
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameView"
            app:hintEnable="true"
            app:hintSearch="@string/email"
            app:isQuickClearText="true"
            app:textFont="@font/montserrat_regular"
            app:textSize="@dimen/text_size"
            app:startIcon="@drawable/ic_at"
            app:tag="@+id/emailView"
            android:background="@drawable/home_top_border_layout"
            android:layout_marginTop="@dimen/country_gap"
            android:layout_marginLeft="@dimen/country_gap"
            android:layout_marginRight="@dimen/country_gap"
            />

        <nhan.natc.laundry.base.customview.CustomSearchEditText
            android:id="@+id/addressView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailView"
            app:hintEnable="true"
            app:hintSearch="@string/address_lbl"
            app:isQuickClearText="true"
            app:textFont="@font/montserrat_regular"
            app:textSize="@dimen/text_size"
            app:startIcon="@drawable/ic_location"
            app:tag="@+id/addressView"
            android:background="@drawable/home_top_border_layout"
            android:layout_marginTop="@dimen/country_gap"
            android:layout_marginLeft="@dimen/country_gap"
            android:layout_marginRight="@dimen/country_gap"
            />

        <nhan.natc.laundry.base.customview.CustomSearchEditText
            android:id="@+id/phoneView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressView"
            app:hintEnable="true"
            app:hintSearch="@string/phone_lbl"
            app:isQuickClearText="true"
            app:textFont="@font/montserrat_regular"
            app:textSize="@dimen/text_size"
            app:startIcon="@drawable/ic_phone"
            app:tag="@+id/phoneView"
            android:background="@drawable/home_top_border_layout"
            android:layout_marginTop="@dimen/country_gap"
            android:layout_marginLeft="@dimen/country_gap"
            android:layout_marginRight="@dimen/country_gap"
            />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.7"
            android:layout_marginBottom="@dimen/country_gap"
            android:background="@drawable/button_blue_border_selector"
            android:text="@string/save_lbl"
            android:fontFamily="@font/montserrat_medium"
            style="@style/ButtonStyle"
            android:onClick="@{() -> viewmodel.onSave()}"/>

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/loading_layout"
            app:isLoading="@{viewmodel.isLoading}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
