<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="nhan.natc.laundry.ui.user.userdetail.viewmodel.UserDetailViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/colorMainBackground">
        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <include
                layout="@layout/status_bar"/>
            <include
                layout="@layout/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:src="@drawable/ic_user_small"
            app:civ_border_width="@dimen/one_dp"
            app:civ_border_color="@color/colorTextNormal"
            android:layout_marginTop="@dimen/button_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout"/>

        <nhan.natc.laundry.base.customview.CustomSearchEditText
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            app:hintEnable="true"
            app:hintSearch="@string/email"
            app:isQuickClearText="true"
            app:textFont="@font/montserrat_regular"
            app:textSize="@dimen/text_size"
            app:startIcon="@drawable/ic_user_small"
            android:background="@drawable/home_top_border_layout"
            android:layout_marginTop="@dimen/left_right_padding"
            android:layout_marginLeft="@dimen/country_gap"
            android:layout_marginRight="@dimen/country_gap"
            />
        <nhan.natc.laundry.base.customview.CustomSearchEditText
            android:id="@+id/passwordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailView"
            app:hintEnable="true"
            app:hintSearch="@string/password_lbl"
            app:isQuickClearText="true"
            app:textFont="@font/montserrat_regular"
            app:textSize="@dimen/text_size"
            app:startIcon="@drawable/lock"
            android:background="@drawable/home_top_border_layout"
            android:layout_marginTop="@dimen/country_gap"
            android:layout_marginLeft="@dimen/country_gap"
            android:layout_marginRight="@dimen/country_gap"
            />
        <nhan.natc.laundry.base.customview.CustomSearchEditText
            android:id="@+id/firstNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordView"
            app:hintEnable="true"
            app:hintSearch="@string/first_name"
            app:isQuickClearText="true"
            app:textFont="@font/montserrat_regular"
            app:textSize="@dimen/text_size"
            app:startIcon="@drawable/ic_notes"
            android:background="@drawable/home_top_border_layout"
            android:layout_marginTop="@dimen/country_gap"
            android:layout_marginLeft="@dimen/country_gap"
            android:layout_marginRight="@dimen/country_gap"/>
        <nhan.natc.laundry.base.customview.CustomSearchEditText
            android:id="@+id/lastNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameView"
            app:hintEnable="true"
            app:hintSearch="@string/last_name"
            app:isQuickClearText="true"
            app:textFont="@font/montserrat_regular"
            app:textSize="@dimen/text_size"
            app:startIcon="@drawable/ic_notes"
            android:background="@drawable/home_top_border_layout"
            android:layout_marginTop="@dimen/country_gap"
            android:layout_marginLeft="@dimen/country_gap"
            android:layout_marginRight="@dimen/country_gap"/>
        <nhan.natc.laundry.base.customview.CustomSearchEditText
            android:id="@+id/roleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameView"
            app:hintEnable="true"
            app:hintSearch="@string/user_role"
            app:isQuickClearText="true"
            app:textFont="@font/montserrat_regular"
            app:textSize="@dimen/text_size"
            app:startIcon="@drawable/ic_empty_end_icon"
            android:background="@drawable/home_top_border_layout"
            android:layout_marginTop="@dimen/country_gap"
            android:layout_marginLeft="@dimen/country_gap"
            android:layout_marginRight="@dimen/country_gap"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue_border_layout"
            android:text="@string/save_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.7"
            android:layout_marginBottom="@dimen/left_right_padding"
            android:onClick="@{() -> viewmodel.onSave()}"/>

        <include
            layout="@layout/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:isLoading="@{viewmodel.isLoading}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
